kubernetes/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wraith
  labels:
    app: wraith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wraith
  template:
    metadata:
      name: wraith
      labels:
        app: wraith
    spec:
      containers:
        - name: wraith
          image: ghcr.io/zgamelogic/wraith:production
          imagePullPolicy: Always
          volumeMounts:
            - name: apns-volume
              mountPath: "/apns"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 30
      volumes:
        - name: apns-volume
          secret:
            secretName: apns-secret
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
