kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wraith
spec:
  selector:
    app: wraith
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
