kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wraith
spec:
  rules:
    - host: "wraith.zgamelogic.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wraith
                port:
                  number: 8080
  tls:
    - hosts:
        - "wraith.zgamelogic.com"
      secretName: ingress-tls
